SERVER-55224 Fix $dateDiff for timezones with non-whole hour Daylight Savings Time UTC offset changes for minute and second units